@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 use strict;
 use warnings;
-use List::Util qw(sum max);
+use List::Util qw(max min);
 use Getopt::Long;
 use utf8;
 use open ':utf8';
@@ -16,6 +16,7 @@ my $top_n = 10;
 my @sort_by = (); # hits or ccrate or vgrate
 my $auto_cut = 1; # 1(ON) or 0(OFF)
 my $show_mode = 1; # 0(OFF) or 1(with query+score) or 2(with query)
+my $similarity = "qbase"; # qbase(default) jaccard dice simpson
 my $comment_block_prefix = "";
 GetOptions (
     "1=s" => \$field_1,
@@ -24,6 +25,7 @@ GetOptions (
     "sortby=s" => \@sort_by,
     "autocut=s" => \$auto_cut,
     "show=s" => \$show_mode,
+    "similarity=s" => \$similarity,
     "comment-block-prefix=s" => \$comment_block_prefix,
     );
 
@@ -146,6 +148,17 @@ sub common_items {
     return \@common_items;
 }
 
+# 類似度計算
+sub calc_similarity {
+    my ($A_r, $B_r) = @_;
+    my @AB = @{common_items($A_r, $B_r)};
+    return 0 if @AB == 0;
+    return @AB / @$A_r if $similarity =~ /^qbase/;
+    return @AB / (@$A_r + @$B_r - @AB) if $similarity =~ /^jaccard/;
+    return @AB * 2 / (@$A_r + @$B_r) if $similarity =~ /^dice/;
+    return @AB / min(@$A_r+0, @$B_r+0) if $similarity =~ /^simpson/;
+}
+
 # 文字列照合でスコア計算
 # cc: common chars rate: 一致した文字数 / キーの文字数
 sub calc_score_ccrate {
@@ -153,8 +166,8 @@ sub calc_score_ccrate {
     my $key_chars_r = counthash_to_list(mk_ngram($key, 1));
     foreach my $e (@$ents_r) {
 	my $ent_chars_r = counthash_to_list(mk_ngram($e->{str}, 1));
-	my @matched_ngrams = @{common_items($key_chars_r, $ent_chars_r)};
-	$e->{ccrate} = sprintf("%.4f", @matched_ngrams / (@$key_chars_r||1));
+	$e->{ccrate} = sprintf("%.4f", calc_similarity($key_chars_r, $ent_chars_r));
+
     }
     return $ents_r;
 } 
@@ -166,8 +179,7 @@ sub calc_score_vgrate {
     my $key_vgram_r = counthash_to_list(mk_all_ngram($key));
     foreach my $e (@$ents_r) {
 	my $ent_vgram_r = counthash_to_list(mk_all_ngram($e->{str}));
-	my @matched_vgrams = @{common_items($key_vgram_r, $ent_vgram_r)};
-	$e->{vgrate} = sprintf("%.4f", @matched_vgrams / (@$key_vgram_r||1));
+	$e->{vgrate} = sprintf("%.4f", calc_similarity($key_vgram_r, $ent_vgram_r));
     }
     return $ents_r;
 } 
