@@ -1,3 +1,11 @@
+2022-01-24  YAMASHITA Tatsuo  <yto@example.com>
+
+	* README.md: update
+
+	* rerankonly.pl: similarity
+
+	* searchii.pl: add similarity (jaccard, dice, simpson)
+
 2022-01-18  YAMASHITA Tatsuo  <yto@example.com>
 
 	* README.md: update.
